<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<TextView
        android:id="@+id/edit_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/edit_instructions" />

    <EditText
        android:id="@+id/edit_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/edit_date"
        android:clickable="true"
        android:cursorVisible="false"
        android:focusable="false"
        android:layout_below="@id/edit_instructions" />

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/edit_title"
        android:inputType="text"
        android:layout_below="@id/edit_date" />

    <EditText
        android:id="@+id/edit_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/edit_description"
        android:inputType="text"
        android:layout_below="@id/edit_title" />

    <EditText
        android:id="@+id/edit_latitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/edit_latitude"
        android:inputType="numberDecimal"
        android:layout_below="@id/edit_description" />

    <EditText
        android:id="@+id/edit_longitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/edit_longitude"
        android:inputType="numberDecimal"
        android:layout_below="@id/edit_latitude" />

    <EditText
        android:id="@+id/edit_artist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/edit_artist"
        android:inputType="text"
        android:layout_below="@id/edit_longitude" />

    <EditText
        android:id="@+id/edit_make"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/edit_make"
        android:inputType="text"
        android:layout_below="@id/edit_artist" />

    <EditText
        android:id="@+id/edit_model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/edit_model"
        android:inputType="text"
        android:layout_below="@id/edit_make" />

    <Button style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/edit_submit"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/edit_button_text"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent" />

</RelativeLayout>