<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com6510.dcs.shef.ac.uk.BrowseActivity">
    <item
        android:id="@+id/edit_metadata"
        android:orderInCategory="100"
        android:title="@string/edit_metadata"
        app:showAsAction="never" />
    <item
        android:id="@+id/show_metadata"
        android:title="@string/show_metadata"
        android:icon="@drawable/ic_info_outline_white_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/show_map_location"
        android:title="@string/show_map_location"
        android:icon="@drawable/ic_location_on_black_24dp"
        app:showAsAction="always" />
</menu>
